--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,12 @@ Flask==3.1.0
 Flask-Cors==5.0.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+packaging==25.0
 pdfkit==1.0.0
 phonenumbers==8.12.25
 PyQRCode==1.2.1
