--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,9 @@ MarkupSafe==3.0.2
 packaging==25.0
 pdfkit==1.0.0
 phonenumbers==8.12.25
+psycopg2-binary==2.9.10
 PyQRCode==1.2.1
+python-decouple==3.8
 pytube==15.0.0
 requests==2.32.3
 soupsieve==2.6
